--- a/src/main/resources/templates/external.html
+++ b/src/main/resources/templates/external.html
@@ -5,6 +5,8 @@
 
     <body>
         <h1>Public Page</h1>
+        <br/><br/>
+        <a href="/customers"> Go to Protected Page</a>
 
     </body>
 
